tests/opaque_type_success/opaque_type_success.exp
Error ----------------------------------------------------------------------------------------------------- test.js:36:1

Unable to determine module type (CommonJS vs ES) if both an export statement and `module.exports` are used in the same
module!

   36| exports.hide = hide;
       ^^^^^^^


Error ---------------------------------------------------------------------------------------------- testimport.js:58:29

Cannot instantiate `$PropertyType` because property `__type` is missing in `C` [1].

   testimport.js:58:29
   58| function t(applicationType: $PropertyType<C, '__type'>): number {
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   testimport.js:58:43
   58| function t(applicationType: $PropertyType<C, '__type'>): number {
                                                 ^ [1]



Found 2 errors
